--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,16 +8,22 @@
   --palette-color-5: #102136;
   --palette-color-light: white;
   --palette-color-dark: black;
+  --font-color-light: whitesmoke;
+  --font-color-dark: black;
+  --button-font-family: 'Viga', sans-serif;
 }
 
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 html {
-  font-size: 1rem;
+  /* This defines the rem root size */
+  font-size: 16px;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  color: var(--font-color-light);
 }
 
 body {
@@ -41,7 +47,7 @@ h2 {
   font-size: 2rem;
 }
 
-main {
+/* main {
   width: 86vw;
   margin-top: 40px;
 
@@ -49,25 +55,37 @@ main {
   justify-content: flex-start;
   align-items: flex-start;
   gap: 2vw;
-}
+} */
 
-#container {
-  color: whitesmoke;
-  font-family: 'Roboto', sans-serif;
-  width: 90vw;
+#page {
+  margin: 20px auto;
   background-color: var(--palette-color-5);
-  margin: 20px auto 0 auto;
+  background-image: url('http://localhost:3000/images/photos/johannes-plenio-voQ97kezCx0-unsplash-flipped-faded-v1.jpg');
+  background-position: bottom;
+  background-size: 94vw;
+  background-repeat: no-repeat;
+  width: 94vw;
+  height: 1400px;
   border-radius: 8px;
 
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
+}
+
+#container {
+  margin: 50px;
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
+  gap: 40px;
 }
 
 #header {
-  margin-top: 2vw;
-  width: 86vw;
+  width: 100%;
 
   display: flex;
   flex-wrap: wrap;
@@ -82,12 +100,27 @@ main {
   gap: 48px;
 }
 
+#main {
+  width: 100%;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 10vw;
+}
+
+#profile-and-navigation {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+}
+
 #profile-image-and-name {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 16px;
+  gap: 22px;
 }
 
 #name-under-profile-image {
@@ -100,6 +133,35 @@ main {
   border: 4px solid var(--palette-color-light);
 }
 
+#main-navigation {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 10px;
+}
+
+#content-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 40px;
+}
+
+#skill-input {
+  line-height: 36px;
+  background-color: transparent;
+  border: 1px solid var(--palette-color-1);
+  border-radius: 5px;
+  width: 200px;
+}
+
+#footer {
+  background-color: green;
+  width: 100%;
+}
+
 .knowledge-map-logo {
   display: flex;
   flex-wrap: nowrap;
@@ -109,7 +171,7 @@ main {
 }
 
 .knowledge-map-logo-image {
-  width: 60px;
+  width: 45px;
 
   /* gif color a bit off, fill with correct color */
   filter: brightness(0) saturate(100%) invert(82%) sepia(48%) saturate(2617%) hue-rotate(343deg) brightness(112%) contrast(102%);
@@ -145,14 +207,58 @@ main {
 }
 
 .button-logout {
-  margin-right: 10px;
   background-color: transparent;
+}
+
+.button-primary {
   color: white;
   padding: 10px 30px;
   border-radius: 5px;
   border: 1px solid var(--palette-color-1);
-  font-family: 'Viga', sans-serif;
+  font-family: var(--button-font-family);
   font-size: 1rem;
+  cursor: pointer;
+}
+
+.button-primary:hover {
+  background-color: var(--palette-color-1);
+}
+
+.button-secondary {
+  background-color: var(--palette-color-2);
+  color: white;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 5px;
+  font-family: var(--button-font-family);
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.form-tech-skill-input {
+  margin-top: 0.6rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  gap: 4px;
+}
+
+.form-label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.skill-indicator {
+  border: 2px solid var(--palette-color-3);
+  height: 36px;
+  width: 100px;
+  border-radius: 5px;
+  background-color: transparent;
+  background-image: url('http://localhost:3000/images/vectors/bulb-outline-grey.svg');
+  background-size: 23px;
+  background-repeat: repeat-x;
+  background-position: center;
+  background-position-x: 5px;
 }
 
 .App {}
