--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz@8..144&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Viga&display=swap');
 
 :root {
+  --button-font-family: 'Viga', sans-serif;
+  --button-padding: 10px 30px;
+  --button-padding-top-bottom: 10px;
+  --button-padding-left-right: 30px;
+  --font-color-light: whitesmoke;
+  --font-color-dark: black;
+  --main-element-height: 40px;
   --palette-color-1: #ffca1b;
   --palette-color-2: #5085ff;
   --palette-color-3: #4d5d6d;
@@ -8,12 +15,7 @@
   --palette-color-5: #102136;
   --palette-color-light: white;
   --palette-color-dark: black;
-  --font-color-light: whitesmoke;
-  --font-color-dark: black;
-  --button-font-family: 'Viga', sans-serif;
-  --button-padding: 10px 30px;
-  --button-padding-top-bottom: 10px;
-  --button-padding-left-right: 30px;
+
 }
 
 * {
@@ -50,16 +52,6 @@ h2 {
   font-size: 2rem;
 }
 
-/* main {
-  width: 86vw;
-  margin-top: 40px;
-
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 2vw;
-} */
-
 #page {
   margin: 20px auto;
   background-color: var(--palette-color-5);
@@ -68,7 +60,7 @@ h2 {
   background-size: 94vw;
   background-repeat: no-repeat;
   width: 94vw;
-  height: 1400px;
+  min-height: 97vh;
   border-radius: 8px;
 
   display: flex;
@@ -154,7 +146,7 @@ h2 {
 
 #skill-input {
   padding: 0 10px;
-  line-height: 40px;
+  line-height: var(--main-element-height);
   background-color: transparent;
   border: 1px solid var(--palette-color-1);
   border-radius: 5px;
@@ -266,15 +258,26 @@ h2 {
 
 .skill-indicator {
   border: 1px solid var(--palette-color-3);
-  height: 40px;
-  width: 100px;
+  height: var(--main-element-height);
+  /* width: 100px; */
   border-radius: 5px;
   background-color: transparent;
-  background-image: url('http://localhost:3000/images/vectors/bulb-outline-grey.svg');
-  background-size: 23px;
-  background-repeat: repeat-x;
-  background-position: center;
-  background-position-x: 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.radio-skill-level {
+  display: none;
+}
+
+.skill-icon {
+  cursor: pointer;
+}
+
+.skill-icon:hover {
+  color: var(--palette-color-1)
 }
 
 .sort-text {
@@ -325,7 +328,9 @@ h2 {
   background-size: 100%;
 }
 
-.App {}
+.App {
+  min-height: 100vh;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
